--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         </div>
 
         <div id="nontech" class="tab-content">
-            <h2>Non-Technical Literature</h2>
+            <h2>Non-technical literature (which I recommend reading)</h2>
             <ul>
                 <li><strong>To kill a Mockingbird</strong> - Harper Lee</li>
                 <li><strong>Twenty thousand leagues under the seas</strong> - Jules Verne</li>
@@ -404,9 +404,15 @@
                 <li><a href="https://www.youtube.com/playlist?list=PLlb7e2G7aSpT4SMpYl6uVYi13k0k9CBiq" target="_blank">OS Architecture</a></li>
             </ul>
 
-            <h3>Computer science</h3>
+            <h3>More</h3>
             <ul>
-                <li><a href="https://www.youtube.com/@VladimirMozhenkov/playlists" target="_blank">Vladimir Mozhenkov's Channel</a></li>
+                <li><a href="http://youtube.com/playlist?list=PLEqoHzpnmTfBlJGjG_2QqKRrXG36TkjNB" target="_blank">Industrial Development Tools</a></li>
+                <li><a href="https://www.youtube.com/@VladimirMozhenkov/playlists" target="_blank">Computer science</a></li>
+                <li><a href="https://www.youtube.com/@dudvstud9081/playlists" target="_blank">All mathematics</a></li>
+                <li><a href="https://docs.google.com/document/d/1U-XBUSU1PMwn7DL_nks2nUmyPSiDDdSpmTF9Ec_7MSU/edit?tab=t.0" target="_blank">Data structures and algorithms</a></li>
+                <li><a href="https://www.youtube.com/watch?v=Sy_wba7l1UU&list=PLawfWYMUziZqyUL5QDLVbe3j5BKWj42E5" target="_blank">CS50 in Russian</a></li>
+                <li><a href="https://www.youtube.com/watch?v=3LPJfIKxwWc&list=PLhQjrBD2T381WAHyx1pq-sBfykqMBI7V4" target="_blank">CS50 in English</a></li>
+
             </ul>
         </div>
 
