for mobile(try 3)

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             margin-bottom: 20px;
             border-bottom: 1px solid var(--border-color);
             flex-wrap: wrap;
-            overflow-x: hidden; /* было: auto */
+            overflow-x: auto; /* было: hidden */
             gap: 10px;
             justify-content: center; /* выравнивание по центру */
         }
