for mobile(try 4)

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     <p><span data-i18n="contact">📫 If you want to contact me, write to me in the discord: n1tch03</span></p>
     <p><span data-i18n="github">🌚 My github:</span> <a href="https://github.com/n1tch03" target="_blank">@n1tch03</a></p>
 </div>
-<div class="tabs" style="overflow-x: auto; white-space: nowrap; flex-wrap: nowrap;">
+<div class="tabs" style="overflow-x: auto; white-space: wrap; flex-wrap: wrap;">
     <button class="tab active" data-i18n="aboutTab" onclick="openTab(event, 'about')">About This Site</button>
     <button class="tab" data-i18n="techTab" onclick="openTab(event, 'tech')">Technical Literature</button>
     <button class="tab" data-i18n="nontechTab" onclick="openTab(event, 'nontech')">Non-Tech Literature</button>
