--- a/index.html
+++ b/index.html
@@ -261,8 +261,9 @@
         }
         
         .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+            display: flex;
+            /*grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));*/
+            justify-content: space-evenly;
             gap: 15px;
             margin-top: 15px;
         }
