--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 <div class="tab-content" id="projects">
     <h2 data-i18n="projectsHeader">Projects</h2>
     <ul>
-        <li><strong>nitch's site</strong> – a small website with useful materials and information about me (actually, you are currently on it).<a href="https://github.com/n1tch03/n1tch03.github.io" target="_blank" style="display: inline-block; margin-top: 20px; font-size: 1.2em; font-weight: bold; color: var(--accent-color); text-decoration: none;">View on GitHub</a></li>
+        <li style="line-height: 1;"><strong>nitch's site</strong> – <div data-i18n="about_project1" style="display: inline;">a small website with useful materials and information about me (actually, you are currently on it).</div><a href="https://github.com/n1tch03/n1tch03.github.io" target="_blank" style="display: inline-block; margin-top: 20px; font-size: 1.2em; font-weight: bold; color: var(--accent-color); text-decoration: none;">View on GitHub</a></li>
     </ul>
 </div>
 
@@ -705,6 +705,7 @@
                 skill9: "Other",
                 skill10: "Algorithms and data structures",
                 skill11: "Working with networks",
+                about_project1 : "a small website with useful materials and information about me (actually, you are currently on it).",
                 contactFooter: "For any questions, contact me on Discord: n1tch03"
             },
             ru: {
@@ -769,6 +770,7 @@
                 skill9: "Остальное",
                 skill10: "Алгоритмы и структуры данных",
                 skill11: "Работа с сетями",
+                about_project1 : "небольшой веб-сайт с полезными материалами и информацией обо мне (собственно, вы сейчас на нем находитесь).",
                 contactFooter: "По любым вопросам пишите мне в Discord: n1tch03"
             }
         };
