--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="icon.png" type="image/png">
-    <link rel="icon" href="icon.png" type="image/x-icon">
+    <link rel="icon" href="img/icon.png" type="image/png">
+    <link rel="icon" href="img/icon.png" type="image/x-icon">
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>nitch</title>
@@ -642,6 +642,18 @@
     <h2 data-i18n="notesHeader">My Notes</h2>
     
     <div class="note-section">
+        <h3 data-i18n="note2Title">The website has finally been created!</h3>
+        <div class="note-date" data-i18n="note2Date">Date: 10-05-2025</div>
+        <div class="note-content">
+            <p data-i18n="note2Content" >i recently updated my workplace: i hung the main monitor on a bracket, installed a second monitor, added more light, organized the storage of wires and improved the visual. i will attach the articles below(OZON):
+                bracket - 147362421
+                second monitor - 1733277004
+                lamp on the monitor - 1424204623
+                wire organizer - 1219123606</p><a href="img/note2.jpg" target="_blank" style="display: inline-block; margin-top: 20px; font-size: 1.2em; font-weight: bold; color: var(--accent-color); text-decoration: none;"><div data-i18n="img_in_note2">and this is what my workplace looks like.</div></a>
+        </div>
+    </div>
+
+    <div class="note-section">
         <h3 data-i18n="note1Title">The website has finally been created!</h3>
         <div class="note-date" data-i18n="note1Date">Date: 08-05-2025</div>
         <div class="note-content">
@@ -729,6 +741,10 @@
                 note1Title: "The website has finally been created!",
                 note1Date: "Date: 08-05-2025",
                 note1Content: "after a few working nights, I finally finished the website. I have collected a lot of useful material here. use it, dear readers.",
+                note2Title: "updating the workspace",
+                note2Date: "Date: 10-05-2025",
+                note2Content: "i recently updated my workplace: i hung the main monitor on a bracket, installed a second monitor, added more light, organized the storage of wires and improved the visual. i will attach the articles below(OZON): bracket - 147362421 second monitor - 1733277004 lamp on the monitor - 1424204623 wire organizer - 1219123606 ",
+                img_in_note2: "and this is what my workplace looks like.",
                 contactFooter: "For any questions, contact me on Discord: n1tch03"
             },
             ru: {
@@ -800,6 +816,10 @@
                 note1Title: "Сайт наконец-то создан!",
                 note1Date: "Дата: 08-05-2025",
                 note1Content: "спустя несколько рабочих ночей я, наконец то, закончил сайт. я собрал тут кучу полезного материала. пользуйтесь, дорогие читатели. ",
+                note2Title: "обновление рабочего пространства",
+                note2Date: "Дата: 10-05-2025",
+                note2Content: "совсем недавно я обновил свое рабочее место: повесил основной монитор на кронштейн, поставил второй монитор, добавил побольше света, организовал хранение проводов и улучшил визуал. артикулы прикреплю ниже(OZON): кронштейн - 147362421 второй монитор - 1733277004 лампа на монитор - 1424204623 органайзер для проводов - 1219123606 ",
+                img_in_note2: "а вот как выглядит мое рабочее место",
                 contactFooter: "По любым вопросам пишите мне в Discord: n1tch03"
             }
         };
