--- a/testbruteforce/index.html
+++ b/testbruteforce/index.html
@@ -52,7 +52,7 @@
 
     <script>
         // Установите здесь ваш пароль
-        const CORRECT_PASSWORD = "MySecurePassword123!";
+        const CORRECT_PASSWORD = "abcd1234";
         
         document.getElementById("passwordForm").addEventListener("submit", function(e) {
             e.preventDefault();
